[package]
name = "revproxy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Clean deps
[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
futures-util = "0.3.30"
http = "0.2.11"
http-body = "1.0.0"
hyper = { version = "0.14.28", features = ["server", "http1", "client", "http2", "stream"] }
reqwest = { version = "0.11.24", features = ["stream"] }
serde_qs = "0.12.0"
tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.5.0", features = ["derive"] }
clap_derive = "4.5.0"
