[package]
name = "revproxy"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
authors = ["chitaotao"]
description = "Create a reverse proxy from a normal proxy."
readme = "README.md"
repository = "https://github.com/chitao1234/"

# TODO: Clean deps
[dependencies]
anyhow = "1.0.79"
base64 = "0.22.1"
futures-util = "0.3.30"
http = "1.1.0"
hyper = { version = "1.3.1", features = ["server", "http1", "client", "http2"] }
reqwest = { version = "0.12.5", features = ["stream", "gzip"] }
serde_qs = "0.13.0"
tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.5.0", features = ["derive"] }
clap_derive = "4.5.0"
fancy-regex = "0.13.0"
mime = "0.3.17"
encoding_rs = "0.8.33"
hyper-util = { version = "0.1.5", features = ["client"] }
http-body-util = "0.1.2"
hyper-tls = "0.6.0"

[features]
default = ["socks5"]
socks5 = ["reqwest/socks"]
